# python-analytics-template

./: .gitignore  Cargo.toml  Pipfile  README.md  lint.sh  pyproject.toml  setup.py  setup.sh  venv.sh
notebooks/: 01-demo.ipynb
src/: lib.rs
src/modules/: utils.py
