[tool.poetry]
name = "Template"
version = "3.11"
readme = "README.md"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
ipykernel = "^6.5.0"
debugpy = "^1.5.1"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP", "RUF", "PL", "NPY", "N"]
show-source = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
# https://careers.wolt.com/en/blog/tech/professional-grade-mypy-configuration
# "python.linting.mypyEnabled": true,
# "python.linting.enabled": true,
python_version = 3.9
strict = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116"

[tool.pyright]
reportGeneralTypeIssues = false
reportUnusedExpression = false
reportMissingImports = false
reportMissingModuleSource = false
reportUnboundVariable = false
reportUndefinedVariable = false
